# gtts_rs

./: Cargo.toml  LICENSE  README.md
cli/: main.rs
src/: constants.rs  lang.rs  lib.rs  tts.rs
src/url/: core.rs
tests/: Cargo.toml  one.rs
